Refactor permission service and repository for clean caching
- Simplified PermissionService with consistent role normalization
- Improved cache stability by deduplicating roles
- Fixed repository handling for empty roles in queries
- Refactored mock repository for consistency
- Removed unused PermissionServiceImpl

Improves cache hit rate and prevents edge-case failures.